--- a/server/.env
+++ b/server/.env
@@ -1,10 +1,9 @@
-MONGO_URI="mongodb+srv://zalajaydeep3110:e1GuzQQMAj3xGGDH@ecommerce.hu99lsd.mongodb.net/"
+MONGO_URI=""
 PORT=3000
-JWT_SECRET=AYEH343I5U884B3JB8D74B8884H
-PASSWORD="e1GuzQQMAj3xGGDH"
+JWT_SECRET=""
+PASSWORD=""
 JWT_EXPIRE=5d
 COOKIE_EXPIRE=5
 EMAIL_SERVICE=Gmail
-EMAIL_USERNAME=zalajaydeep3110@gmail.com
-EMAIL_PASSWORD=jaddu3110
-APP_PASSWORD=oaofglpqoqylfnri
+EMAIL_USERNAME=""
+EMAIL_PASSWORD=""
